# decreasse_cut

./: CMakeLists.txt  README.md  REAMDE.md  fpga_reader.cpp  fpga_reader.h  main.cpp
.cache/clangd/index/: fpga_reader.cpp.E16CD4D44C3EC4C7.idx
src/: fpga_reader.cpp  fpga_reader.h
